crud tiep
