# docs/swagger.yaml
@@ -325,6 +325,67 @@ paths:
       summary: Create a new book
       tags:
       - Book
+  /books/{bookId}:
+    delete:
+      description: Delete a book by ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: bookId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Delete a book
+      tags:
+      - Book
+    put:
+      consumes:
+      - application/json
+      description: Update a book by ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: bookId
+        required: true
+        type: integer
+      - description: Book request body
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/request.BookCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Update a book
+      tags:
+      - Book
   /books/{bookId}/chapters:
     get:
       description: Retrieve all chapters associated with a book
@@ -421,6 +482,60 @@ paths:
       summary: Create a complete book with chapters and pages
       tags:
       - Book
+  /chapter/{chapterId}/page/{pageId}:
+    delete:
+      description: Delete a page by ID
+      parameters:
+      - description: Page ID
+        in: path
+        name: pageId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Delete a page
+      tags:
+      - Page
+  /chapters/{chapterId}:
+    delete:
+      description: Delete a chapter by ID
+      parameters:
+      - description: Chapter ID
+        in: path
+        name: chapterId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Delete a chapter
+      tags:
+      - Chapter
   /chapters/{chapterId}/pages:
     get:
       description: Retrieve all pages within a chapter
@@ -513,6 +628,22 @@ paths:
       tags:
       - Orders
   /shelves:
+    get:
+      description: Retrieve all shelves available in the system
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Get all shelves
+      tags:
+      - Shelve
     post:
       consumes:
       - application/json
@@ -545,6 +676,33 @@ paths:
           schema:
             $ref: '#/definitions/response.WebResponse'
       summary: Create a new shelve
+      tags:
+      - Shelve
+  /shelves/{shelveId}:
+    delete:
+      description: Delete a shelve by ID
+      parameters:
+      - description: Shelve ID
+        in: path
+        name: shelveId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Delete a shelve
       tags:
       - Shelve
   /users:
@@ -596,6 +754,33 @@ paths:
           schema:
             $ref: '#/definitions/response.WebResponse'
       summary: Update user information
+      tags:
+      - Users
+  /users/{userId}:
+    delete:
+      description: Xóa người dùng dựa trên ID
+      parameters:
+      - description: ID của người dùng cần xóa
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Xóa người dùng thành công
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "400":
+          description: Không lấy được userId hợp lệ
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+        "500":
+          description: Lỗi server
+          schema:
+            $ref: '#/definitions/response.WebResponse'
+      summary: Xóa người dùng
       tags:
       - Users
 swagger: "2.0"
